# deepsize

./: .gitignore  Cargo.toml  README.md
deepsize_derive/: Cargo.toml
deepsize_derive/src/: lib.rs
examples/: derive.rs
src/: default_impls.rs  external_impls.rs  lib.rs  test.rs
