[package]
name = "deepsize"
version = "0.1.2"
authors = ["Aeledfyr <aeledfyr@gmail.com>"]
license = "MIT"
description = "A crate for measuring the total size of object on the stack and heap"
repository = "https://github.com/Aeledfyr/deepsize/"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"
keywords = ["size", "stack", "heap"]
categories = ["development-tools::profiling", "memory-management"]

[dependencies]
deepsize_derive = { path = "deepsize_derive", version = "0.1.1", optional = true }
slotmap = { version = "^0.3", optional = true }

[dev-dependencies]
deepsize_derive = { path = "deepsize_derive", version = "0.1.1" }

[features]
default = ["std", "derive"]
derive = ["deepsize_derive"]
std = []

slotmap_support = ["slotmap"]

