[package]
name = "deepsize"
version = "0.2.0"
authors = ["Aeledfyr <aeledfyr@gmail.com>"]
license = "MIT"
description = "A crate for measuring the total size of object on the stack and heap"
repository = "https://github.com/Aeledfyr/deepsize/"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"
keywords = ["size", "stack", "heap"]
categories = ["development-tools::profiling", "memory-management"]

[dependencies]
deepsize_derive = { path = "deepsize_derive", version = "0.1.2", optional = true }
slotmap = { version = "^0.4", optional = true }
slab = { version = "^0.4", optional = true }
indexmap = { version = "^1", optional = true }
arrayvec = { version = "^0.5", optional = true }
smallvec = { version = "^1", optional = true }
hashbrown = { version = "^0.9", optional = true }
chrono = { version = "^0.4", optional = true }

[dev-dependencies]
deepsize_derive = { path = "deepsize_derive", version = "0.1.2" }

[features]
default = ["std", "derive"]
derive = ["deepsize_derive"]
std = []
